<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_Motors" Id="{18897f1c-ccae-480c-8190-b291347a5f12}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Motors :
(
	M1StageCollection 		:= 1,
	M2SampleRecVertical		:= 2,
	M3SampleRecHorizontal	:= 3,
	M4Valve1				:= 4,
	M5Valve2				:= 5,
	M6Valve3				:= 6,
	M7Valve4				:= 7,
	M8Valve5				:= 8
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>